# goit-personal-helper-team-project

./: .flake8  README.md  address_book.py  bot_assistant.py  main.py  pyproject.toml  tests.py
.github/workflows/: python-validation.yml  tests.yml
src/: bot_assistant.py  main.py
src/constants/: __init__.py  constants.py
src/decorators/: __init__.py  input_error.py
src/models/: __init__.py  address_book.py  birthday.py  email.py  field.py  name.py  note.py  phone.py  record.py  tag.py
src/services/: absolute_path_provider.py
src/utils/: logger.py
tests/models/: test_address_book.py  test_birthday.py  test_mail.py  test_note.py  test_phone.py
